# fiveLinux

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  exe-handler.sh  fivem-setup.sh  install-deps.sh  run.sh
include/fivemlinux/: fivemlinux.h  graphics.h  network.h  types.h
src/: api.cpp  config.h.in  fivemlinux.cpp
src/cli/: CMakeLists.txt  command_interface.cpp  command_interface.h  main.cpp
src/core/: CMakeLists.txt  config.cpp  config.h  environment.cpp  environment.h  logger.cpp  logger.h  system_detector.cpp  system_detector.h
src/fivem/: CMakeLists.txt  cache_manager.cpp  cache_manager.h  installer.cpp  installer.h  launcher.cpp  launcher.h  server_tools.cpp  server_tools.h  updater.cpp  updater.h
src/graphics/: CMakeLists.txt  dxvk_checker.cpp  dxvk_checker.h  gpu_detector.cpp  gpu_detector.h  graphics.cpp  vkd3d_checker.cpp  vkd3d_checker.h  vulkan_checker.cpp  vulkan_checker.h
src/gta/: CMakeLists.txt  files_checker.cpp  files_checker.h  installation_detector.cpp  installation_detector.h  repair_system.cpp  repair_system.h
src/network/: CMakeLists.txt  firewall_check.cpp  firewall_check.h  latency_test.cpp  latency_test.h  network.cpp  port_manager.cpp  port_manager.h
src/rockstar/: CMakeLists.txt  games_manager.cpp  games_manager.h  launcher.cpp  launcher.h
src/wine/: CMakeLists.txt  dll_manager.cpp  dll_manager.h  prefix_manager.cpp  prefix_manager.h  proton_support.cpp  proton_support.h  registry.cpp  registry.h
tests/: CMakeLists.txt  test_core.cpp  test_fivem.cpp  test_graphics.cpp  test_wine.cpp
